@@ -29,9 +29,11 @@ option(WITH_INCHI   "build inchi lib" ON)
 option(BUILD_SHARED "enable static build support" ON)
 if(BUILD_SHARED)
   set(BUILD_TYPE SHARED)
+  set(PLUGIN_TYPE MODULE)
   add_definitions(-DUSING_DYNAMIC_LIBS)
 else(BUILD_SHARED)
   set(BUILD_TYPE STATIC)
+  set(PLUGIN_TYPE STATIC)
 endif(BUILD_SHARED)
 
 if(WIN32)
