@@ -139,7 +139,7 @@ if(BUILD_SHARED)
 endif(BUILD_SHARED)
 
 foreach(format ${formats})
-  add_library(${format} ${BUILD_TYPE} ${format}.cpp
+  add_library(${format} ${PLUGIN_TYPE} ${format}.cpp
     ${${format}_additional_sources}
     ${CMAKE_BINARY_DIR}/include/openbabel/babelconfig.h)
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
@@ -154,7 +154,7 @@ foreach(format ${formats})
 endforeach(format)
 
 foreach(format ${xml_formats})
-  add_library(${format} ${BUILD_TYPE} xml/${format}.cpp xml/xml.cpp)
+  add_library(${format} ${PLUGIN_TYPE} xml/${format}.cpp xml/xml.cpp)
   target_link_libraries(${format} ${libs} ${BABEL_LIBRARY})
   install(TARGETS ${format}
                   RUNTIME DESTINATION bin
